--- a/src/components/App.css
+++ b/src/components/App.css
@@ -45,10 +45,22 @@ a:hover {
   width: 100%;
 }
 
+.main__error   {
+  padding-top: 0px;
+}
+
 .main-title {
   margin-top: 40px;
   color: #822000;
   text-align: center;
+}
+
+.sub-title {
+  text-align: center;
+}
+
+.main-title__short {
+  margin-bottom: 0px;
 }
 
 .form--input {
@@ -183,7 +195,7 @@ input[type="number"] {
   flex-direction: column;
   align-items: center;
   width: 40px;
-  height: 250px;
+  height: 314px;
 }
 
 .battle-toolbar--options-dropdown {
