--- a/src/components/App.css
+++ b/src/components/App.css
@@ -177,6 +177,16 @@ input[type="number"] {
 .battle-toolbar--button {
   padding: 4px;
   height: 40px;
+  margin-top: 25px;
+}
+
+.battle-toolbar--button__top, .battle-toolbar--button__progress {
+  margin-top: 5px !important;
+}
+
+.battle-toolbar--button__toggle {
+  padding: 4px;
+  height: 40px;
   margin-top: 5px;
 }
 
@@ -199,8 +209,8 @@ input[type="number"] {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 40px;
-  height: 314px;
+  width: 40px;  
+  height: 100%;
 }
 
 .battle-toolbar--options-dropdown {
@@ -216,7 +226,7 @@ input[type="number"] {
   justify-content: space-between;
   flex-direction: column;
   margin-top: 10px;
-  height: 100%;
+  height: 314px;
 }
 
 /* Input */
