Mobile view: dnd beyond search button fixed (#58)
* Mobile view: dnd beyond search button fixed

* Changes after review

* Bump patch version

Co-authored-by: Bill Sheikh <my@pers.on.al>

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -180,9 +180,8 @@ input[type="number"] {
   margin-top: 5px;
 }
 
-.battle-toolbar--button__reset {
-  padding-bottom: 2px;
-  padding-top: 0;
+.battle-toolbar--button__option {
+  margin-top: 25px;
 }
 
 .battle-toolbar--button__load {
@@ -200,7 +199,6 @@ input[type="number"] {
   flex-direction: column;
   align-items: center;
   width: 40px;
-  height: 314px;
 }
 
 .battle-toolbar--options-dropdown {
@@ -212,11 +210,7 @@ input[type="number"] {
   box-shadow: 0 5px 5px #979AA4;
   padding: 10px 10px;
   background: #ebe2d3;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
   margin-top: 10px;
-  height: 100%;
 }
 
 /* Input */
