--- a/src/components/App.css
+++ b/src/components/App.css
@@ -505,6 +505,22 @@ input[type=number].input {
   background-color: lightgrey;
 }
 
+.creature-header {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.creature-expander-button {
+  border: none;
+  box-shadow: none;
+  padding: 0px;
+  display: flex;
+}
+
+.creature-expander-icon {
+  margin-left: 10px;
+}
+
 .expanded-creature {
   width: 100%;
 }
@@ -514,8 +530,6 @@ input[type=number].input {
   font-size: 28px;
   text-transform: capitalize;
   color: #822000;
-  margin-top: 4px;
-  margin-bottom: 4px;
 }
 
 .expanded-creature--name__one-line {
@@ -628,8 +642,6 @@ input[type=number].input {
   color: #822000;
   text-align: left;
   text-transform: capitalize;
-  margin-top: 4px;
-  margin-bottom: 4px;
 }
 
 .collapsed-creature--name__dead {
