--- a/src/components/App.css
+++ b/src/components/App.css
@@ -465,7 +465,7 @@ input[type="number"] {
 
 .creature-title {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   margin-bottom: 5px;
 }
 
