--- a/src/components/App.css
+++ b/src/components/App.css
@@ -456,7 +456,6 @@ input[type="number"] {
   border-radius: 15px;
   margin: 60px 0 10px 0;
   padding: 10px;
-  background-color: #EBE1AD;
 }
 
 .creature-wrapper__active {
@@ -485,10 +484,6 @@ input[type="number"] {
     border-left: none;
     border-right: none;
   }
-}
-
-.creature-wrapper__dead {
-  background-color: lightgrey;
 }
 
 .creature-header {
@@ -698,7 +693,7 @@ input[type="number"] {
   color: black;
 }
 
-.health-points--critical {
+.health-points--injured {
   color: #822000;
 }
 
