--- a/src/components/App.css
+++ b/src/components/App.css
@@ -464,6 +464,10 @@ input[type="number"] {
   padding: 10px;
 }
 
+.creature-wrapper__active-not-shared {
+  border: 4px dashed #822000;
+}
+
 .creature-wrapper__active {
   border: 4px solid #822000;
 }
