--- a/src/components/App.css
+++ b/src/components/App.css
@@ -462,14 +462,12 @@ input[type="number"] {
   border-radius: 15px;
   margin: 60px 0 10px 0;
   padding: 10px;
-}
-
-.creature-wrapper__active-not-shared {
-  border: 4px dashed #822000;
+  box-sizing: border-box;
 }
 
 .creature-wrapper__active {
-  border: 4px solid #822000;
+  border-top: 10px solid #822000;
+  border-bottom: 10px solid #822000;
 }
 
 .creature-title {
