--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,6 +13,12 @@ button, .button {
   box-shadow: 0 0 5px #979AA4;
 }
 
+.button__disabled {
+  background-color: transparent;
+  cursor: auto;
+  border: 2px dashed #822000;
+}
+
 a {
   text-decoration-color: #822000;
   color: black;
@@ -188,12 +194,6 @@ input[type="number"] {
 
 .battle-toolbar--button__option {
   margin-top: 25px;
-}
-
-.battle-toolbar--button__disabled {
-  background-color: transparent;
-  cursor: auto;
-  border: 2px dashed #822000;
 }
 
 .battle-toolbar--options-container {
@@ -462,10 +462,12 @@ input[type="number"] {
   border-radius: 15px;
   margin: 60px 0 10px 0;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 .creature-wrapper__active {
-  border: 4px solid #822000;
+  border-top: 10px solid #822000;
+  border-bottom: 10px solid #822000;
 }
 
 .creature-title {
@@ -489,6 +491,12 @@ input[type="number"] {
   .creature-wrapper__active {
     border-left: none;
     border-right: none;
+  }
+}
+
+@media only screen and (max-width: 280px) {
+  .creature-wrapper {
+    padding: 10px 0;
   }
 }
 
