--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,11 +6,17 @@ body {
 button, .button {
   cursor: pointer;
   border: 2px solid #822000;
-  padding: 10px;
   font-weight: bold; 
   background-color: #EBE1AD;
   border-radius: 15px;
   box-shadow: 0 0 5px #979AA4;
+  padding: 0px;
+  height: 44px;
+  width: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 .button__disabled {
@@ -279,6 +285,7 @@ input[type="number"] {
   border: none;
   box-shadow: none;
   margin: 0;
+  height: 40px;
 }
 
 .input--submit__left {
@@ -338,9 +345,14 @@ input[type="number"] {
 }
 
 .creature-toolbar--button {
-  padding: 5px;
-  margin-top: 23px;
+  margin-top: 27px;
   grid-column: span 2;
+}
+
+.creature-toolbar--button__navigation {
+  border: none;
+  background: none;
+  box-shadow: none;
 }
 
 .creature-toolbar--button__dead {
@@ -403,8 +415,6 @@ input[type="number"] {
 }
 
 .create-creature-form--submit {
-  height: 44px;
-  padding: 4px;
   grid-column: span 2;
 }
 
@@ -463,7 +473,6 @@ input[type="number"] {
 
   .create-creature-form--submit {
     grid-column: 4 / span 2;
-    width: 60px;
   }
 }
 
@@ -530,8 +539,7 @@ input[type="number"] {
 .creature-expander-button {
   border: none;
   box-shadow: none;
-  padding: 0px;
-  display: flex;
+  width: auto;
 }
 
 .creature-expander-button__disabled {
@@ -570,20 +578,8 @@ input[type="number"] {
   color: #822000;
 }
 
-.expanded-creature--remove-button {
-  max-width: 20%;
-  padding: 4px;
-  height: 43px;
-}
-
 .expanded-creature--confirm-remove-button {
-  max-width: 20%;
-  padding: 4px;
-  height: 43px;
   min-width: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .expanded-creature--separator {
@@ -700,7 +696,6 @@ input[type="number"] {
   margin-right: 15%;
   margin-left: 5px;
   padding: 4px;
-  display: flex;
 }
 
 @media only screen and (max-width: 768px) {
@@ -716,7 +711,6 @@ input[type="number"] {
 
 .creature-title-button {
   padding: 4px;
-  display: flex;
   margin-left: 10px;
 }
 
