--- a/src/components/App.css
+++ b/src/components/App.css
@@ -309,13 +309,13 @@ input[type="number"] {
 /* Creature toolbar */
 
 @keyframes creature-toolbar-page1-fadein {
-  from {opacity: 0%;}
-  to {opacity: 100%;}
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 @keyframes creature-toolbar-page2-fadein {
-  from {opacity: 0%;}
-  to {opacity: 100%;}
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 .creature-toolbar {
