--- a/src/components/App.css
+++ b/src/components/App.css
@@ -46,6 +46,7 @@ a:hover {
 }
 
 .main-footer-wrapper {
+  padding-top: 68px;
   display: flex;
   align-items: center;
   flex-flow: column;
@@ -65,6 +66,10 @@ a:hover {
   align-items: center;
   flex-flow: column;
   width: 100%;
+}
+
+.main__search-open {
+  border-top: 2px solid #822000;
 }
 
 .main__error   {
@@ -792,30 +797,21 @@ input[type="number"] {
   margin-right: 10px;
 }
 
-.main-side-wrapper {
-  padding-top: 68px;
-  display: flex;
-  flex-direction: column;
-}
-
-@keyframes side-panel-entrance {
+@keyframes rules-search-bar-entrance {
   0% { height: 0; opacity: 0; }
   75% { height: 108px; opacity: 0; }
   100% { height: 108px; opacity: 1; }
 }
 
-.side-panel {
+.rules-search-bar {
   height: 108px;
   padding-top: 20px;
   animation-duration: 200ms;
   animation-timing-function: ease-in-out;
-  animation-name: side-panel-entrance;
+  animation-name: rules-search-bar-entrance;
   display: flex;
   justify-content: center;
-}
-
-.main-footer-wrapper__right {
-  border-top: 2px solid #822000;
+  width: 100%;
 }
 
 .dnd-beyond-search {
