--- a/src/components/App.css
+++ b/src/components/App.css
@@ -68,10 +68,6 @@ a:hover {
   width: 100%;
 }
 
-.main__search-open {
-  border-top: 2px solid #822000;
-}
-
 .main__error   {
   padding-top: 0px;
 }
@@ -797,10 +793,17 @@ input[type="number"] {
   margin-right: 10px;
 }
 
+/* Rules search bar */
+
 @keyframes rules-search-bar-entrance {
   0% { height: 0; opacity: 0; }
   75% { height: 108px; opacity: 0; }
   100% { height: 108px; opacity: 1; }
+}
+
+.rules-search-bar-wrapper {
+  width: 100%;
+  border-bottom: 2px solid #822000;
 }
 
 .rules-search-bar {
