--- a/src/components/App.css
+++ b/src/components/App.css
@@ -46,6 +46,7 @@ a:hover {
 }
 
 .main-footer-wrapper {
+  padding-top: 68px;
   display: flex;
   align-items: center;
   flex-flow: column;
@@ -64,7 +65,6 @@ a:hover {
   display: flex;
   align-items: center;
   flex-flow: column;
-  padding-top: 48px;
   width: 100%;
 }
 
@@ -73,7 +73,7 @@ a:hover {
 }
 
 .main-title {
-  margin-top: 40px;
+  margin-top: 20px;
   color: #822000;
   text-align: center;
 }
@@ -141,7 +141,7 @@ input[type="number"] {
  * On screen keyboards and the sticky bar leave a very small viewport.
  */
 @media only screen and (max-width: 600px) and (orientation: landscape) {
-  .main {
+  .main-footer-wrapper {
     padding-top: 0px;
   }
 
@@ -160,8 +160,8 @@ input[type="number"] {
   max-width: 25%;
 }
 
-/* Remove most unimportant battle bar info for screens smaller than 768px */
-@media only screen and (max-width: 768px) {
+/* Remove most unimportant battle bar info for screens smaller than 825px */
+@media only screen and (max-width: 825px) {
   .battle-toolbar--stat__extra2 {
     display: none;
   }
@@ -366,7 +366,7 @@ input[type="number"] {
   height: 44px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .creature-toolbar {
     margin-left: 5px;
   }
@@ -503,7 +503,7 @@ input[type="number"] {
 }
 
 /* Ensure the creature boxes take up 100% of the screen width for smaller screens. */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .creature-list {
     width: 100%;
   }
@@ -559,7 +559,7 @@ input[type="number"] {
   align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .expanded-creature--name {
     white-space: unset;
     overflow: unset
@@ -589,7 +589,7 @@ input[type="number"] {
   width: 85%;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .expanded-creature--separator {
     width: 100%;
   }
@@ -607,7 +607,7 @@ input[type="number"] {
   margin-bottom: 15px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .creature--columns__wide {
     column-count: 1;
   }
@@ -668,7 +668,7 @@ input[type="number"] {
   margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .creature-note-list--label {
     width: 100%;
   }
@@ -690,7 +690,7 @@ input[type="number"] {
   padding: 4px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .creature-note-list--button {
     margin-right: 0;
   }
@@ -729,7 +729,7 @@ input[type="number"] {
 }
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 825px) {
   .footer-text {
     width: auto;
   }
@@ -791,4 +791,53 @@ input[type="number"] {
 .error-bar--dismiss {
   border: 2px solid black;
   margin-right: 10px;
+}
+
+/* Rules search bar */
+
+@keyframes rules-search-bar-entrance {
+  0% { height: 0; opacity: 0; }
+  75% { height: 108px; opacity: 0; }
+  100% { height: 108px; opacity: 1; }
+}
+
+.rules-search-bar-wrapper {
+  width: 100%;
+  border-bottom: 2px solid #822000;
+}
+
+.rules-search-bar {
+  height: 108px;
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.rules-search-bar__entrance-animation {
+  animation-duration: 200ms;
+  animation-timing-function: ease-in-out;
+  animation-name: rules-search-bar-entrance;
+  animation-fill-mode: both;
+}
+
+.dnd-beyond-search {
+  width: 50%;
+}
+
+@media only screen and (max-width: 825px) {
+  .dnd-beyond-search {
+    width: auto;
+    min-width: 280px;
+  }
+
+  .dnd-beyond-search .form--label {
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 1565px) {
+  .dnd-beyond-search {
+    max-width: 785px;
+  }
 }
