--- a/src/components/App.css
+++ b/src/components/App.css
@@ -498,10 +498,6 @@ input[type="number"] {
   border-bottom: 10px solid #822000;
 }
 
-.creature-title {
-  display: flex;
-}
-
 /* Ensure the creature boxes take up 100% of the screen width for smaller screens. */
 @media only screen and (max-width: 825px) {
   .creature-list {
@@ -526,9 +522,29 @@ input[type="number"] {
   }
 }
 
+.creature-title {
+  display: flex;
+}
+
+/* Drop creature title tools onto a newline on smaller screens. */
+@media only screen and (max-width: 600px) {
+  .creature-title {
+    flex-direction: column;
+  }
+}
+
 .creature-header {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.creature-header--controls {
+  display: flex;
+}
+
+.creature-title-button {
+  padding: 4px;
+  margin-left: 10px;
 }
 
 .creature-expander-button {
@@ -699,11 +715,6 @@ input[type="number"] {
 .creature-note-list--timer {
   margin-left: 10px;
   white-space: nowrap;
-}
-
-.creature-title-button {
-  padding: 4px;
-  margin-left: 10px;
 }
 
 /* Health points */
